--- a/data-engineer.html
+++ b/data-engineer.html
@@ -69,6 +69,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698287112-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Philadelphia, PA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4455560002'>Job Application for Data Engineer, Growth/Forecasting at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -163,7 +167,7 @@
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -183,11 +187,11 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4496361002'>Job Application for Data Engineering Manager at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4496361002'>Job Application for Data Engineering Manager at Starry</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698254432-data-engineering-consultant'>Devoteam Data Engineering Consultant | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698254432-data-engineering-consultant'>Devoteam Data Engineering Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden  Stockholm</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -264,7 +268,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/addepar1/jobs/4496209002'>Job Application for Data Engineer - BI / Analytics  at Addepar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/addepar1/jobs/4496209002'>Job Application for Data Engineer - BI / Analytics  at Addepar</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -297,7 +301,7 @@ uma empresa de tecnologia movida por pessoas apaixonadas e cheias de?...</p>
 <p><span class="badge badge-light">Gothenburg</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/FRB08D2Yt'>Data Engineer I - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/FRB08D2Yt'>Data Engineer I - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Missouri, St. Louis</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -311,11 +315,11 @@ uma empresa de tecnologia movida por pessoas apaixonadas e cheias de?...</p>
 <p><span class="badge badge-light">Cape Town South Africa</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trianz/job/ogApbfwa'>Trianz Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trianz/job/ogApbfwa'>Trianz Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">San Jose, California  Santa Clara, California  San Francisco, California  Austin, Texas</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/hinge94/jobs/4490876002?gh_src=9364dddf2'>Job Application for Data Engineer at Hinge</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/hinge94/jobs/4490876002?gh_src=9364dddf2'>Job Application for Data Engineer at Hinge</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... U.S. Equal Opportunity Employment Information (Completion is voluntary). 
 Individuals seeking employment at Hinge are considered without regards to race,
@@ -335,7 +339,7 @@ Individuals seeking employment at Hinge are considered without regards to race,
 <p><span class="badge badge-light">Greece  Greece</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://metricarecruitment.com/jobs/data-engineer-london-26404/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://metricarecruitment.com/jobs/data-engineer-london-26404/'>
 Data Engineer Job in London ?55K-?70K</a></h5> 
 <p><span class="badge badge-light">London London?  London</span></p>
 <p>Posted on:: 2019-10-25</p>
@@ -394,7 +398,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/optimusride/dc2d83ea-b689-422c-88cb-9556df3aa2d4'>Optimus Ride - Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/optimusride/dc2d83ea-b689-422c-88cb-9556df3aa2d4'>Optimus Ride - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -455,7 +459,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/hinge94/jobs/4490876002'>Job Application for Data Engineer at Hinge</a></h5> 
+<h5><a href='https://boards.greenhouse.io/hinge94/jobs/4490876002'>Job Application for Data Engineer at Hinge</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -471,16 +475,12 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/bi-developer-data-engineer-36683'>BI Developer / Data Engineer - Nokia Careers</a></h5> 
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bi-developer-data-engineer-36683'>BI Developer / Data Engineer - Nokia Careers</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999697985043-data-engineer-with-customer-360-crm-etl-design-sql-python'>Bey Data Engineer with Customer 360, CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697977065-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Richmond, VA, USA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
 
